@@ -4,6 +4,26 @@ ADDONS
 
 This is a list of additional addons/features.
 
+|
+
+conda_recipes_dir
+=================
+
+directory in which conda recipes are located:
+useful if one wants one common conda_recipes folder for different conda installation:
+defaults to: `CONDA ROOT/conda_recipes`
+
+conda_recipes_dir: /home/0_CONDA_RELATED_0/conda-recipes
+
+USAGE: see `condarc_EXAMPLE file <condarc_EXAMPLE>`_
+
+.. code-block:: bash
+
+    # CONDA_RECIPES_DIR:
+    # directory in which conda recipes are located:
+    # useful if one wants one common conda_recipes folder for 
+    # different conda installation (defaults to: *CONDA ROOT/conda_recipes)
+    conda_recipes_dir: /home/0_CONDA_RELATED_0/conda-recipes
 
 |
 |
